test/cli/suppress-non-critical/suppress-non-critical.out
-e:1: Parse Error: unexpected token: syntax error http://go/e/2001
     1 |!
         ^
Errors: 1
0
